[package]
name = "promise-rs"
version = "0.2.0"
authors = ["Stan Kondrat <stan.kondrat@gmail.com>"]
license = "MIT"
description = "Rust Promise library"
repository = "https://github.com/stan-kondrat/promise-rs"
keywords = ["promise"]
readme = "README.md"

[lib]
name = "promise"

[[bin]]
name = "promise"

[dependencies]
